updates slide link and intro language

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="header-text">
       <h1 class="header-title">Intro to Writing SVG: Resources</h1>
       <h3 class="header-by">By Joni Trythall (aka Joni Bologna)</h3>
-      <h4 class="header-where"><em>For the 2015 GDI Philly Class.</em></h4>
+      <h4 class="header-where"><em>Companion For GDI Class.</em></h4>
     </div>
   </header>
 
@@ -30,7 +30,7 @@
       <section>
         <h2>Slides</h2>
         <p>
-          The slides for this course can <a href="http://bit.ly/1PyITlb">be found here.</a>
+          The slides for this course can <a href="https://docs.google.com/presentation/d/1PZZnf0Z9uViwX8ma4gnbT8BGybIiAygLf_LOkdhclAY/pub?start=false&loop=false&delayms=3000">be found here.</a>
         </p>
       </section>
 
