adds fun demos list

--- a/index.html
+++ b/index.html
@@ -181,6 +181,23 @@
             <a href="http://jonibologna.com/using-svg-stroke-attributes/">Using SVG stroke Attributes</a>
           </li>
         </ul>
+        
+        <h4>Just Crazy Fun Demos On CodePen</h4>
+        <ul>
+          <li>
+            <a href="http://codepen.io/sol0mka/pen/mICGv">Advanced Animation Path</a>
+          </li>
+          <li>
+            <a href="http://codepen.io/sol0mka/pen/yNOage">Bubble Layout</a>
+          </li>
+          <li>
+            <a href="http://codepen.io/sol0mka/pen/XJjLxe">Modal Destroy Concept</a>
+          </li>
+          <li>
+            <a href="http://codepen.io/noeldelgado/pen/ByxQjL">X-Ray Me</a>
+          </li>
+
+        </ul>
       </section>
 
       <section>
