additional demo links

--- a/index.html
+++ b/index.html
@@ -196,7 +196,18 @@
           <li>
             <a href="http://codepen.io/noeldelgado/pen/ByxQjL">X-Ray Me</a>
           </li>
-
+          <li>
+            <a href="http://codepen.io/yoksel/pen/XJbzrO">Elastic Stroke</a>
+          </li>
+          <li>
+            <a href="http://codepen.io/yoksel/pen/ckldD">Text With Animated Backgrounds</a>
+          </li>
+          <li>
+            <a href="http://codepen.io/yoksel/pen/fjcvA">Spinning Loaders</a>
+          </li>
+          <li>
+            <a href="http://codepen.io/lbebber/pen/OPjxZL">SVG Blobs</a>
+          </li>
         </ul>
       </section>
 
