adds mini workshop slides link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <section>
         <h2>Slides</h2>
         <p>
-          The slides for this course can <a href="https://docs.google.com/presentation/d/1PZZnf0Z9uViwX8ma4gnbT8BGybIiAygLf_LOkdhclAY/pub?start=false&loop=false&delayms=3000">be found here.</a>
+          The slides for the full course can <a href="https://docs.google.com/presentation/d/1PZZnf0Z9uViwX8ma4gnbT8BGybIiAygLf_LOkdhclAY/pub?start=false&loop=false&delayms=3000">be found here</a> and <a href="https://docs.google.com/presentation/d/1Lyn7tbcdFzygksPpH25ru8F6daJSyGetbexMR-Ru3P4/edit?usp=sharing">slides for the mini workshop are here</a>.
         </p>
       </section>
 
