--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
           A complete collection of the practice demos used throughout the course can <a href="http://codepen.io/collection/DVYpJK/">be found here.</a>
         </p>
       </section>
+      
+      <section>
+        <h2>Book</h2>
+        <p>
+          <a href="http://svgpocketguide.com/book/">Pocket Guide to Writing SVG</a>
+        </p>
+      </section>
 
       <section>
         <h2>Resources</h2>
