resolve syntax error

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <a href="http://bohemiancoding.com/sketch/">Sketch</a>
           </li>
           <li>
-            <a href="http://www.indeeo.com/idraw/">iDraw</a></a>
+            <a href="http://www.indeeo.com/idraw/">iDraw</a>
           </li>
           <li>
-            <a href="http://www.webcodeapp.com/">WebCode</a></a>
+            <a href="http://www.webcodeapp.com/">WebCode</a>
           </li>
         </ul>
 
